Feat: navbar 구현

--- a/server/package.json
+++ b/server/package.json
@@ -73,5 +73,8 @@
     "start": "nodemon server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.55.0"
+  }
 }
